--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -24,48 +24,48 @@
     {
       "type": "os",
       "key": " ",
-      "keyColor": "35",
+      "keyColor": "blue",
     },
     {
       "type": "kernel",
       "key": " ",
-      "keyColor": "35",
+      "keyColor": "blue",
     },
     {
       "type": "packages",
       "format": "{} (emerge)",
       "key": " ",
-      "keyColor": "35",  
+      "keyColor": "blue",  
     },
     {
       "type": "shell",
       "key": " ",
-      "keyColor": "35", 
+      "keyColor": "blue", 
     },
     {
       "type": "terminal",
       "key": " ",
-      "keyColor": "35", 
+      "keyColor": "blue", 
     },
     {
       "type": "wm",
       "key": " ",
-      "keyColor": "35", 
+      "keyColor": "blue", 
     },
     {
       "type": "uptime",
       "key": " ",
-      "keyColor": "35", 
+      "keyColor": "blue", 
     },
     {
       "type": "cpu",
       "key": " ",
-      "keyColor": "35",
+      "keyColor": "blue",
     },
     {
       "type": "gpu",
       "key": " ",
-      "keyColor": "35",
+      "keyColor": "blue",
       "hideType": "Integrated",
     },
     "break",
